--- a/apps/nicoletta-portfolio/nicoletta-portfolio-app/vercel.json
+++ b/apps/nicoletta-portfolio/nicoletta-portfolio-app/vercel.json
@@ -2,10 +2,7 @@
   "builds": [
     {
       "src": "apps/xulf/package.json",
-      "use": "@vercel/node",
-      "config": {
-        "buildCommand": "npx nx build xulf --prod"
-      }
+      "use": "@nrwl/next:build"
     }
   ],
   "routes": [
