--- a/apps/morrison-developers/morrison-developers-app/project.json
+++ b/apps/morrison-developers/morrison-developers-app/project.json
@@ -1,9 +1,24 @@
 {
   "name": "morrison-developers",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/morrison-developers",
+  "sourceRoot": "apps/morrison-developers/morrison-developers-app",
   "projectType": "application",
   "tags": [],
-  "// targets": "to see all targets run: nx show project morrison-developers --web",
-  "targets": {}
+  "targets": {
+    "build": {
+      "executor": "@nrwl/next:build",
+      "outputs": ["{options.outputPath}"],
+      "options": {
+        "outputPath": "dist/apps/morrison-developers",
+        "root": "apps/morrison-developers/morrison-developers-app",
+        "nextConfig": "apps/morrison-developers/morrison-developers-app/next.config.js",
+        "buildLibsFromSource": false
+      },
+      "configurations": {
+        "production": {
+          "outputPath": "dist/apps/morrison-developers"
+        }
+      }
+    }
+  }
 }
