--- a/apps/sweet-sye/sweet-sye/project.json
+++ b/apps/sweet-sye/sweet-sye/project.json
@@ -4,6 +4,21 @@
   "sourceRoot": "apps/sweet-sye/sweet-sye",
   "projectType": "application",
   "tags": [],
-  "// targets": "to see all targets run: nx show project sweet-sye --web",
-  "targets": {}
+  "targets": {
+    "build": {
+      "executor": "@nrwl/next:build",
+      "outputs": ["{options.outputPath}"],
+      "options": {
+        "outputPath": "dist/apps/sweet-sye",
+        "root": "apps/sweet-sye/sweet-sye",
+        "nextConfig": "apps/sweet-sye/sweet-sye/next.config.js",
+        "buildLibsFromSource": false
+      },
+      "configurations": {
+        "production": {
+          "outputPath": "dist/apps/sweet-sye"
+        }
+      }
+    }
+  }
 }
