--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.6.0",
     "@prisma/internals": "^6.6.0",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
     "@vercel/analytics": "^1.4.1",
     "bl": "^6.0.18",
     "clsx": "^2.1.1",
@@ -43,12 +45,14 @@
     "react-dom": "18.3.1",
     "react-flow-renderer": "^10.3.17",
     "react-is": "18.3.1",
+    "react-tsparticles": "^2.12.2",
     "react-use-precision-timer": "^3.5.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "styled-components": "5.3.6",
     "ts-morph": "^25.0.1",
     "tslib": "^2.3.0",
+    "tsparticles": "^3.8.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
