--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.6.0",
     "@prisma/internals": "^6.6.0",
+    "@react-three/drei": "^10.0.8",
+    "@react-three/fiber": "^9.1.2",
+    "@react-three/postprocessing": "^3.0.4",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
     "@vercel/analytics": "^1.4.1",
@@ -50,6 +53,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "styled-components": "5.3.6",
+    "three": "^0.176.0",
     "ts-morph": "^25.0.1",
     "tslib": "^2.3.0",
     "tsparticles": "^3.8.1",
@@ -102,6 +106,7 @@
     "@types/react-dom": "^19.1.1",
     "@types/react-is": "18.3.0",
     "@types/styled-components": "5.1.26",
+    "@types/three": "^0.176.0",
     "@typescript-eslint/eslint-plugin": "^8.29.1",
     "@typescript-eslint/parser": "^8.29.1",
     "@vitejs/plugin-react": "^4.2.0",
