--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "license": "MIT",
   "private": true,
   "type": "commonjs",
-  "prisma": {
-    "schema": "libs/db/src/lib/prisma/schema.prisma"
+  "scripts": {
+    "generate:xulf": "prisma generate --schema=libs/db/src/lib/prisma/schema.prisma",
+    "generate:morrison": "prisma generate --schema=libs/mor-dev-db/src/lib/prisma/schema.prisma"
   },
   "dependencies": {
     "@auth/core": "^0.38.0",
@@ -31,6 +32,8 @@
     "@react-three/drei": "^10.0.8",
     "@react-three/fiber": "^9.1.2",
     "@react-three/postprocessing": "^3.0.4",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.0",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
     "@vercel/analytics": "^1.4.1",
@@ -52,6 +55,7 @@
     "react-use-precision-timer": "^3.5.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "stripe": "^18.1.1",
     "styled-components": "5.3.6",
     "three": "^0.176.0",
     "ts-morph": "^25.0.1",
