--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,7 @@
     "paths": {
       "@xulf/backend": ["libs/backend/src/index.ts"],
       "@xulf/db": ["libs/db/src/index.ts"],
+      "@xulf/mor-dev-db": ["libs/mor-dev-db/src/index.ts"],
       "@xulf/drag": ["libs/drag/src/index.ts"],
       "@xulf/editor-ui": ["libs/editor-ui/src/index.ts"],
       "@xulf/essentials": ["libs/essentials/src/index.ts"],
