udpate stripe types

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "react-use-precision-timer": "^3.5.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
-    "stripe": "^18.1.1",
+    "stripe": "^18.2.1",
     "styled-components": "5.3.6",
     "three": "^0.176.0",
     "ts-morph": "^25.0.1",
@@ -109,6 +109,7 @@
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
     "@types/react-is": "18.3.0",
+    "@types/stripe": "^8.0.417",
     "@types/styled-components": "5.1.26",
     "@types/three": "^0.176.0",
     "@typescript-eslint/eslint-plugin": "^8.29.1",
