--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,11 @@
 {
-  "projects": {
-    "morrison-developers": {
-      "source": "apps/morrison-developers",
-      "functions": {
-        "api/**/*.ts": {
-          "includeFiles": [
-            "libs/mor-dev-db/src/lib/generated/morrison-prisma-client/**",
-            "node_modules/.prisma/client/**",
-            "node_modules/@prisma/client/**"
-          ]
-        }
-      }
+  "functions": {
+    "apps/morrison-developers/api/**/*.ts": {
+      "includeFiles": [
+        "libs/mor-dev-db/src/lib/generated/morrison-prisma-client/**",
+        "node_modules/.prisma/client/**",
+        "node_modules/@prisma/client/**"
+      ]
     }
   }
 }
