--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
   "functions": {
-    "apps/morrison-developers/api/**/*.ts": {
+    "apps/morrison-developers/morrison-developers-app/app/api/**.ts": {
       "includeFiles": [
-        "libs/mor-dev-db/src/lib/generated/morrison-prisma-client/**",
-        "node_modules/.prisma/client/**",
-        "node_modules/@prisma/client/**"
+        "libs/mor-dev-db/src/lib/generated/morrison-prisma-client",
+        "node_modules/.prisma/client",
+        "node_modules/@prisma/client"
       ]
     }
   }
