--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "functions": {
-    "apps/morrison-developers/morrison-developers-app/app/api/**.ts": {
+    "app/api/**.ts": {
       "includeFiles": "libs/mor-dev-db/src/lib/generated/morrison-prisma-client/**"
     }
   }
