update next config

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,3 @@
 {
-  "functions": {
-    "apps/morrison-developers/morrison-developers-app/app/api/**/route.js": {
-      "includeFiles": [
-        "node_modules/@prisma/client/**/*",
-        "node_modules/.prisma/client/**/*",
-        "libs/mor-dev-db/src/lib/generated/morrison-prisma-client/**/*"
-      ]
-    }
-  }
+  "$schema": "https://openapi.vercel.sh/vercel.json"
 }
