stub up routing

--- a/apps/shavon-lloyd/shavon-lloyd-app/tsconfig.json
+++ b/apps/shavon-lloyd/shavon-lloyd-app/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "jsx": "preserve",
     "jsxImportSource": "@emotion/react",
+    "module": "NodeNext",
     "allowJs": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
