--- a/apps/shavon-lloyd/shavon-lloyd-app/tsconfig.json
+++ b/apps/shavon-lloyd/shavon-lloyd-app/tsconfig.json
@@ -18,7 +18,10 @@
         "name": "next"
       }
     ],
-    "types": ["jest", "node"]
+    "types": [
+      "jest",
+      "node"
+    ]
   },
   "include": [
     "**/*.ts",
@@ -27,7 +30,13 @@
     "**/*.jsx",
     "../../../apps/shavon-lloyd/shavon-lloyd-app/.next/types/**/*.ts",
     "../../../dist/apps/shavon-lloyd/shavon-lloyd-app/.next/types/**/*.ts",
-    "next-env.d.ts"
+    "next-env.d.ts",
+    ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules", "jest.config.ts", "**/*.spec.ts", "**/*.test.ts"]
+  "exclude": [
+    "node_modules",
+    "jest.config.ts",
+    "**/*.spec.ts",
+    "**/*.test.ts"
+  ]
 }
