stub up works page, add VideoCard, add component registry, clean up css arcitecture

--- a/apps/shavon-lloyd/shavon-lloyd/tsconfig.json
+++ b/apps/shavon-lloyd/shavon-lloyd/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
+    "baseUrl": "src",
     "jsx": "preserve",
     "module": "nodenext",
     "allowJs": true,
@@ -12,6 +13,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "incremental": true,
+    "paths": {
+      "@components/*": ["app/components/*"],
+      "@shared/*": ["app/(shared)/*"]
+    },
     "plugins": [
       {
         "name": "next"
