add carousel and export shavon-lloyd components to xulf lib

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -27,6 +27,7 @@
       "@xulf/prisma": ["node_modules/.prisma/client"],
       "@xulf/types": ["libs/types/src/index.ts"],
       "@xulf/ui": ["libs/ui/src/index.ts"],
+      "@xulf/ui/*": ["libs/ui/src/*"],
       "@xulf/utils": ["libs/utils/src/index.ts"]
     }
   },
