--- a/apps/shavon-lloyd/shavon-lloyd/project.json
+++ b/apps/shavon-lloyd/shavon-lloyd/project.json
@@ -4,6 +4,28 @@
   "sourceRoot": "apps/shavon-lloyd/shavon-lloyd",
   "projectType": "application",
   "tags": [],
-  "// targets": "to see all targets run: nx show project shavon-lloyd --web",
-  "targets": {}
+  "targets": {
+    "build": {
+      "executor": "@nrwl/next:build",
+      "outputs": ["{options.outputPath}"],
+      "options": {
+        "outputPath": "dist/apps/shavon-lloyd",
+        "root": "apps/shavon-lloyd/shavon-lloyd",
+        "nextConfig": "apps/shavon-lloyd/shavon-lloyd/next.config.js",
+        "buildLibsFromSource": false
+      },
+      "configurations": {
+        "production": {
+          "outputPath": "dist/apps/shavon-lloyd"
+        }
+      }
+    },
+    "serve": {
+      "executor": "@nrwl/next:server",
+      "options": {
+        "buildTarget": "shavon-lloyd:build",
+        "dev": true
+      }
+    }
+  }
 }
