--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "bl": "^6.0.18",
     "clsx": "^2.1.1",
     "emailjs-com": "^3.2.0",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.12.2",
     "hawk": "^9.0.2",
     "lodash": "^4.17.21",
