--- a/apps/shavon-lloyd/shavon-lloyd/tsconfig.json
+++ b/apps/shavon-lloyd/shavon-lloyd/tsconfig.json
@@ -12,6 +12,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "incremental": true,
+    "allowImportingTsExtensions": true,
     "plugins": [
       {
         "name": "next"
