--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "@emotion/react": "^11.11.1",
     "@emotion/server": "11.11.0",
     "@emotion/styled": "^11.11.0",
-    "@fullcalendar/core": "^6.1.19",
-    "@fullcalendar/daygrid": "^6.1.19",
-    "@fullcalendar/interaction": "^6.1.19",
+    "@fullcalendar/core": "6.1.19",
+    "@fullcalendar/daygrid": "6.1.19",
+    "@fullcalendar/interaction": "6.1.19",
     "@fullcalendar/list": "^6.1.19",
-    "@fullcalendar/react": "^6.1.19",
+    "@fullcalendar/react": "6.1.19",
     "@mantine/core": "^7.12.2",
     "@mantine/hooks": "^7.12.2",
     "@mantine/next": "^6.0.22",
