--- a/libs/layouts/tsconfig.json
+++ b/libs/layouts/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "jsx": "react-jsx",
+    "module": "NodeNext",
     "allowJs": false,
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
