--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@tsparticles/react": "^3.0.0",
     "@vercel/analytics": "^1.4.1",
     "bl": "^6.0.18",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "emailjs-com": "^3.2.0",
     "embla-carousel-react": "^8.6.0",
@@ -57,6 +58,7 @@
     "react-dom": "18.3.1",
     "react-flow-renderer": "^10.3.17",
     "react-is": "18.3.1",
+    "react-photo-album": "^3.1.0",
     "react-tsparticles": "^2.12.2",
     "react-use-precision-timer": "^3.5.5",
     "reflect-metadata": "^0.1.13",
@@ -67,6 +69,7 @@
     "ts-morph": "^25.0.1",
     "tslib": "^2.3.0",
     "tsparticles": "^3.8.1",
+    "yet-another-react-lightbox": "^3.25.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
